# py-cantor-gui

cantor_gui/: README.md  __init__.py  __main__.py  app.py  canvas.py  controller.py  main_window.py  panels.py  pyproject.toml  requirements.txt
cantor_gui/examples/: demo.sh
cantor_gui/renderers/: __init__.py  cantor_dust.py  cantor_line.py
cantor_gui/tests/: test_cantor_math.py
cantor_gui/utils/: colors.py
